--- a/style.css
+++ b/style.css
@@ -18,16 +18,6 @@ aside {
 
 }
 
-@media screen and (max-width: 62rem) {
-  aside {
-    display: none;
-  }
-  main {
-    width: 100% !important;
-    margin-left: 0 !important;
-  }
-}
-
 aside img {
   width: 142px;
   position: relative;
@@ -65,4 +55,71 @@ header, footer {
   background-color: #e1d6f7;
   border-top: 1px solid #b399eb;
   border-bottom: 1px solid #b399eb;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: .5rem;
+}
+
+.cards .card {
+  width: calc(33% - .5rem);
+  min-height: 14rem;
+  border: 1px solid #b399eb;
+  padding: 1rem;
+  position: relative;
+}
+
+.cards .card img {
+  width: 142px;
+  position: absolute;
+  top: 1rem;
+  left: .5rem;
+}
+
+.card .card-right {
+  width: calc(100% - 1rem - 143px);
+  margin-left: 142px;
+  min-height: 190px;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+}
+
+.card p {
+  margin: 0;
+}
+
+h2 span {
+  font-weight: 300;
+  font-size: .8em;
+}
+
+@media screen and (max-width: 75rem) {
+
+  .cards .card {
+    width: calc(50% - .5rem);
+  }
+}
+
+@media screen and (max-width: 62rem) {
+  aside {
+    display: none;
+  }
+  main {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  header, footer {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .cards .card {
+    width: 100%;
+  }
 }
