--- a/style.css
+++ b/style.css
@@ -98,6 +98,13 @@ h2 span {
   font-size: .8em;
 }
 
+/* @media screen and (min-width: 110rem) {
+
+  .cards .card {
+    width: calc(25% - .5rem);
+  }
+} */
+
 @media screen and (max-width: 75rem) {
 
   .cards .card {
